# Chess

./: CMakeLists.txt  Makefile  README.md  petripat
examples/: castle.txt  enPassant.txt  movesSaveCheckmate.txt  promotion.txt  vstup
src/: main.cpp
src/AI/: CAI.cpp  CAI.h
src/AI/Easy/: CEasy.cpp  CEasy.h
src/AI/Hard/: CHard.cpp  CHard.h
src/AI/Medium/: CMedium.cpp  CMedium.h
src/AbstractPiece/: CAbstractPiece.cpp  CAbstractPiece.h  ECPiece.h
src/AbstractPiece/Bishop/: CBishop.cpp  CBishop.h
src/AbstractPiece/King/: CKing.cpp  CKing.h
src/AbstractPiece/Knight/: CKnight.cpp  CKnight.h
src/AbstractPiece/Pawn/: CPawn.cpp  CPawn.h
src/AbstractPiece/Queen/: CQueen.cpp  CQueen.h
src/AbstractPiece/Rook/: CRook.cpp  CRook.h
src/AbstractPlayer/: CAbstractPlayer.cpp  CAbstractPlayer.h
src/AbstractPlayer/Computer/: CComputer.cpp  CComputer.h
src/AbstractPlayer/Player/: CPlayer.cpp  CPlayer.h
src/Board/: CBoard.cpp  CBoard.h  ECGameState.h
src/CChessBoard/: CChessBoard.cpp  CChessBoard.h
src/Chess/: CChess.cpp  CChess.h  ECColor.h
src/Configuration/: CConfiguration.cpp  CConfiguration.h
src/Coordinates/: CCoordinates.cpp  CCoordinates.h
src/Game/: CGame.cpp  CGame.h
src/PieceMove/: SPieceMove.h
src/Visualization/: CVisualization.cpp  CVisualization.h
testing/: AI1Checkmate  Test_generate.txt  ai2-checkmate  check  check.txt  checkmate.txt  moveIntoCheck.txt  notSmart.txt  notSmartoTHER.txt  test  vv  wrong_stalemate.txt  wtf.txt
